src/app.css
@import 'tailwindcss';
@import 'tw-animate-css';

@custom-variant dark (&:is(.dark *));

:root {
	--background: hsl(0 0% 100%) /* <- Wrap in HSL */;
	--foreground: hsl(240 10% 3.9%);
	--muted: hsl(240 4.8% 95.9%);
	--muted-foreground: hsl(240 3.8% 46.1%);
	--popover: hsl(0 0% 100%);
	--popover-foreground: hsl(240 10% 3.9%);
	--card: hsl(0 0% 100%);
	--card-foreground: hsl(240 10% 3.9%);
	--border: hsl(240 5.9% 90%);
	--input: hsl(240 5.9% 90%);
	--primary: hsl(240 5.9% 10%);
	--primary-foreground: hsl(0 0% 98%);
	--secondary: hsl(240 4.8% 95.9%);
	--secondary-foreground: hsl(240 5.9% 10%);
	--accent: hsl(240 4.8% 95.9%);
	--accent-foreground: hsl(240 5.9% 10%);
	--destructive: hsl(0 72.2% 50.6%);
	--destructive-foreground: hsl(0 0% 98%);
	--ring: hsl(240 10% 3.9%);
	--sidebar: hsl(0 0% 98%);
	--sidebar-foreground: hsl(240 5.3% 26.1%);
	--sidebar-primary: hsl(240 5.9% 10%);
	--sidebar-primary-foreground: hsl(0 0% 98%);
	--sidebar-accent: hsl(240 4.8% 95.9%);
	--sidebar-accent-foreground: hsl(240 5.9% 10%);
	--sidebar-border: hsl(220 13% 91%);
	--sidebar-ring: hsl(217.2 91.2% 59.8%);
	--radius: 0.5rem;
	--shadow-primary-low: 0 4px 15px hsla(240, 5.9%, 10%, 0.1);
	--shadow-primary-high: 0 4px 15px hsla(240, 5.9%, 10%, 0.4);
}

.dark {
	--background: hsl(240 10% 3.9%);
	--foreground: hsl(0 0% 98%);
	--muted: hsl(240 3.7% 15.9%);
	--muted-foreground: hsl(240 5% 64.9%);
	--popover: hsl(240 10% 3.9%);
	--popover-foreground: hsl(0 0% 98%);
	--card: hsl(240 10% 3.9%);
	--card-foreground: hsl(0 0% 98%);
	--border: hsl(240 3.7% 15.9%);
	--input: hsl(240 3.7% 15.9%);
	--primary: hsl(0 0% 98%);
	--primary-foreground: hsl(240 5.9% 10%);
	--secondary: hsl(240 3.7% 15.9%);
	--secondary-foreground: hsl(0 0% 98%);
	--accent: hsl(240 3.7% 15.9%);
	--accent-foreground: hsl(0 0% 98%);
	--destructive: hsl(0 62.8% 30.6%);
	--destructive-foreground: hsl(0 0% 98%);
	--ring: hsl(240 4.9% 83.9%);
	--sidebar: hsl(240 5.9% 10%);
	--sidebar-foreground: hsl(240 4.8% 95.9%);
	--sidebar-primary: hsl(224.3 76.3% 48%);
	--sidebar-primary-foreground: hsl(0 0% 100%);
	--sidebar-accent: hsl(240 3.7% 15.9%);
	--sidebar-accent-foreground: hsl(240 4.8% 95.9%);
	--sidebar-border: hsl(240 3.7% 15.9%);
	--sidebar-ring: hsl(217.2 91.2% 59.8%);
	--shadow-primary-low: 0 4px 15px hsla(0, 0%, 98%, 0.1);
	--shadow-primary-high: 0 4px 15px hsla(0, 0%, 98%, 0.4);
}

@theme inline {
	--font-sans: 'Karla', ui-sans-serif, system-ui, sans-serif;
	--font-serif: 'Cormorant', ui-serif, Georgia, serif;

	/* Radius (for rounded-*) */
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);

	/* Colors */
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--color-muted: var(--muted);
	--color-muted-foreground: var(--muted-foreground);
	--color-popover: var(--popover);
	--color-popover-foreground: var(--popover-foreground);
	--color-card: var(--card);
	--color-card-foreground: var(--card-foreground);
	--color-border: var(--border);
	--color-input: var(--input);
	--color-primary: var(--primary);
	--color-primary-foreground: var(--primary-foreground);
	--color-secondary: var(--secondary);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-accent: var(--accent);
	--color-accent-foreground: var(--accent-foreground);
	--color-destructive: var(--destructive);
	--color-destructive-foreground: var(--destructive-foreground);
	--color-ring: var(--ring);
	--color-radius: var(--radius);
	--color-sidebar: var(--sidebar);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-ring: var(--sidebar-ring);
	--color-dreamy-candy: #b390ed8c;
	--color-queer-blue: #89aae6;
}

@theme {
	--animate-breathing-shadow: breathing-shadow 3s ease-in-out infinite;
	--animate-nav-beam: nav-beam 1.2s ease-in-out infinite;

	@keyframes nav-beam {
		0% {
			transform: translateX(-100%);
		}
		100% {
			transform: translateX(400%);
		}
	}

	@keyframes breathing-shadow {
		0%,
		100% {
			box-shadow: var(--shadow-primary-low);
		}
		50% {
			box-shadow: var(--shadow-primary-high);
		}
	}
}

@layer base {
	* {
		@apply border-border;
	}

	body {
		@apply bg-background text-foreground;
	}

	html,
	body,
	body > div:first-child {
		@apply h-full w-full;
	}

	.h-nav {
		@apply h-16 md:h-20;
	}

	.h-main {
		@apply md:min-h-[calc(100%-5rem)];
	}

	.w-calendar {
		@apply w-[250px];
	}

	.center-flex {
		@apply flex w-full flex-col items-center justify-center;
	}

	.center-absolute {
		@apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
	}
}

@font-face {
	font-family: 'Cormorant';
	font-style: normal;
	font-weight: 300;
	font-display: swap;
	src: url('/fonts/Cormorant-Light.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: italic;
	font-weight: 300;
	font-display: swap;
	src: url('/fonts/Cormorant-LightItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src: url('/fonts/Cormorant-Regular.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: italic;
	font-weight: 400;
	font-display: swap;
	src: url('/fonts/Cormorant-Italic.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: normal;
	font-weight: 500;
	font-display: swap;
	src: url('/fonts/Cormorant-Medium.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: italic;
	font-weight: 500;
	font-display: swap;
	src: url('/fonts/Cormorant-MediumItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: normal;
	font-weight: 600;
	font-display: swap;
	src: url('/fonts/Cormorant-SemiBold.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: italic;
	font-weight: 600;
	font-display: swap;
	src: url('/fonts/Cormorant-SemiBoldItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src: url('/fonts/Cormorant-Bold.ttf') format('truetype');
}

@font-face {
	font-family: 'Cormorant';
	font-style: italic;
	font-weight: 700;
	font-display: swap;
	src: url('/fonts/Cormorant-BoldItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: normal;
	font-weight: 200;
	font-display: swap;
	src: url('/fonts/Karla-ExtraLight.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: italic;
	font-weight: 200;
	font-display: swap;
	src: url('/fonts/Karla-ExtraLightItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: normal;
	font-weight: 300;
	font-display: swap;
	src: url('/fonts/Karla-Light.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: italic;
	font-weight: 300;
	font-display: swap;
	src: url('/fonts/Karla-LightItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: normal;
	font-weight: 400;
	font-display: swap;
	src: url('/fonts/Karla-Regular.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: italic;
	font-weight: 400;
	font-display: swap;
	src: url('/fonts/Karla-Italic.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: normal;
	font-weight: 500;
	font-display: swap;
	src: url('/fonts/Karla-Medium.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: italic;
	font-weight: 500;
	font-display: swap;
	src: url('/fonts/Karla-MediumItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: normal;
	font-weight: 600;
	font-display: swap;
	src: url('/fonts/Karla-SemiBold.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: italic;
	font-weight: 600;
	font-display: swap;
	src: url('/fonts/Karla-SemiBoldItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: normal;
	font-weight: 700;
	font-display: swap;
	src: url('/fonts/Karla-Bold.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: italic;
	font-weight: 700;
	font-display: swap;
	src: url('/fonts/Karla-BoldItalic.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: normal;
	font-weight: 800;
	font-display: swap;
	src: url('/fonts/Karla-ExtraBold.ttf') format('truetype');
}

@font-face {
	font-family: 'Karla';
	font-style: italic;
	font-weight: 800;
	font-display: swap;
	src: url('/fonts/Karla-ExtraBoldItalic.ttf') format('truetype');
}

